FIX: Universal routing and visibility finalized

--- a/flux_app/style.css
+++ b/flux_app/style.css
@@ -1120,10 +1120,7 @@ input:focus {
   width: 100%;
 }
 
-/* Auth isolation */
-#app-container .bottom-nav {
-  display: none !important;
-}
+
 
 #flux-bg-canvas {
   display: block;
